Fix Bug 365944 - KAddressbook crashes on startup with configured CardDav

Apply patch from comment in this BR.
I can't reproduce bug but value() will not assert as at(...)
FIXED-IN: 5.3.0
BUG: 365944